--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: student-portal
 
   jackson:
-    default-property-inclusion: non_null
+    default-property-inclusion: non_default
 
 
   datasource:
@@ -31,7 +31,7 @@ spring:
 redis:
   host: localhost
   port: 6379
-  password: redis
+  password:
   database: 0
   timeout: 1000
-  timeToLive: 30
+  timeToLive: 15
