--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,14 @@ spring:
 #      hibernate:
 #        format_sql: true
 
+#logging:
+#  level:
+#    org:
+#      springframework:
+#        security:
+#          web:
+#            FilterChainProxy: DEBUG
+
 redis:
   host: localhost
   port: 6379
