made changes to the code based on personal pr review

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: student-portal
+    name: student-management-system
 
   jackson:
     default-property-inclusion: non_null
