--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
