--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,10 +10,9 @@ spring:
 
 
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/student_management_system?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-    username: root
-    password:
+    url: jdbc:mysql://bt9bdm7m5sa6rvrx4xwg-mysql.services.clever-cloud.com:3306/bt9bdm7m5sa6rvrx4xwg?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: un6oimk8htyqwlxj
+    password: RuaDytTQck6mKu00TKd1
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -22,3 +21,11 @@ spring:
         prepStmtCacheSize: 250
         prepStmtCacheSqlLimit: 2048
         useServerPrepStmts: true
+
+redis:
+  host: localhost
+  port: 6379
+  password:
+  database: 0
+  timeout: 1000
+  timeToLive: 15
