--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,12 +17,9 @@ spring:
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://bt9bdm7m5sa6rvrx4xwg-mysql.services.clever-cloud.com:3306/bt9bdm7m5sa6rvrx4xwg?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-    username: un6oimk8htyqwlxj
-    password: RuaDytTQck6mKu00TKd1
-#    url: jdbc:mysql://localhost:3306/student_management_system?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-#    username: root
-#    password: Zawarudo12!@
+    url: jdbc:mysql://localhost:3306/student_management_system?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: root
+    password: Zawarudo12!@
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -31,14 +28,6 @@ spring:
         prepStmtCacheSize: 250
         prepStmtCacheSqlLimit: 2048
         useServerPrepStmts: true
-
-#redis:
-#  host: bccmlkrseikcvx2rv2ax-redis.services.clever-cloud.com
-#  port: 3366
-#  password: H9202MBbzvIikK73Rek
-#  database: 0
-#  timeout: 1000
-#  timeToLive: 15
 
 redis:
   host: localhost
