--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,3 +29,7 @@ redis:
   database: 0
   timeout: 1000
   timeToLive: 15
+
+treblle:
+  api-key: HeyANOrCZwEPLKD3ViPhQKSDXJfJMYTg
+  project-id: vZEhEssIg6r7uWKB
