--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,9 +10,9 @@ spring:
 
 
   datasource:
-    url: jdbc:mysql://bt9bdm7m5sa6rvrx4xwg-mysql.services.clever-cloud.com:3306/bt9bdm7m5sa6rvrx4xwg?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-    username: un6oimk8htyqwlxj
-    password: RuaDytTQck6mKu00TKd1
+    url: jdbc:mysql://bf5x9wnf1snfkoigvlqd-mysql.services.clever-cloud.com:3306/bt9bdm7m5sa6rvrx4xwg?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: u4zhwwzvraeslyh0
+    password: KfOX3jAbC77IxSHZeAg0
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -23,9 +23,9 @@ spring:
         useServerPrepStmts: true
 
 redis:
-  host: bccmlkrseikcvx2rv2ax-redis.services.clever-cloud.com
-  port: 3366
-  password: H9202MBbzvIikK73Rek
+  host: bfgcgzatztqchphcwy5k-redis.services.clever-cloud.com
+  port: 3512
+  password: 3pOu1Cgf569Jjvxs81H
   database: 0
   timeout: 1000
   timeToLive: 15
