--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,9 +10,9 @@ spring:
 
 
   datasource:
-    url: jdbc:mysql://bf5x9wnf1snfkoigvlqd-mysql.services.clever-cloud.com:3306/bt9bdm7m5sa6rvrx4xwg?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-    username: u4zhwwzvraeslyh0
-    password: KfOX3jAbC77IxSHZeAg0
+    url: jdbc:mysql://student-management-system.crruakemgggf.us-east-1.rds.amazonaws.com:3306/student_management_system?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: admin
+    password: password123$
     hikari:
       poolName: Hikari
       auto-commit: false
