--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/student_management_system?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-    username: root
-    password: Zawarudo12!@
+    url: jdbc:mysql://student-management-system.crruakemgggf.us-east-1.rds.amazonaws.com:3306/student_management_system?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+    username: admin
+    password: password123$
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -30,9 +30,9 @@ spring:
         useServerPrepStmts: true
 
 redis:
-  host: localhost
-  port: 6379
-  password:
+  host: bfgcgzatztqchphcwy5k-redis.services.clever-cloud.com
+  port: 3512
+  password: 3pOu1Cgf569Jjvxs81H
   database: 0
   timeout: 1000
   timeToLive: 15
