updated trebble api keys

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,8 @@ redis:
   database: 0
   timeout: 1000
   timeToLive: 15
+
+treblle:
+  api-key: HeyANOrCZwEPLKD3ViPhQKSDXJfJMYTg
+  project-id: BZUQKrYTla6qQtei
+  masking-keywords: authToken, Authorization, activationKey
