--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
             <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.treblle.local</groupId>
+            <artifactId>treblle-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
