--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>StudentPortal</name>
     <description>StudentPortal</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
         <testcontainers.version>1.17.6</testcontainers.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
     </properties>
@@ -140,7 +140,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.treblle.local</groupId>
+            <groupId>com.treblle.local</groupId>
             <artifactId>treblle-spring-boot-starter</artifactId>
             <version>2.0.0</version>
         </dependency>
